# codename19-PLC_IO

./: .gitignore  README.md  app_launcher.py  omron-io-planner.spec  pyproject.toml
.codex/: AGENT.md
docs/: ladder_omron_spec_and_migration.md
docs/plans/: 2026-04-05-auto-generated-names-implementation.md  2026-04-05-ui-layout-polish.md  2026-04-09-io-search-replace-advanced-options.md  2026-04-09-io-search-replace.md
scripts/: inspect_xlsx.py
src/omron_io_planner/: __init__.py  addressing.py  app.py  auto_name.py  cx_emitter.py  export.py  io_excel.py  ladder_drag_mime.py  ladder_static_validate.py  models.py  omron_ladder_migration.py  omron_ladder_spec.py  omron_ladder_topology.py  omron_symbol_types.py  omron_zones.py  persistence.py  program_export.py  program_models.py  program_symbols.py  project_manager.py  st_loose_format.py
src/omron_io_planner/ui/: __init__.py  data_type_delegate.py  dialogs.py  fb_editor_widget.py  highlight_header_view.py  icons.py  io_table_widget.py  ladder_editor_widget.py  ladder_graphics_scene.py  ladder_instruction_palette.py  main_window.py  main_window_utils.py  (+13 more)
tests/: test_addressing.py  test_auto_name.py  test_channels_export.py  test_cx_emitter.py  test_io_excel.py  test_ladder_graphics_scene.py  test_ladder_static_validate.py  test_omron_placement.py  test_omron_symbol_types.py  test_omron_topology.py  test_packaging.py  test_program_editors.py  test_program_export.py  test_program_models.py  test_program_symbols.py  test_program_workspace_ui.py  test_st_loose_format.py  test_ui_table_workflow.py  test_window_shell.py
