[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omron-io-planner"
version = "0.4.2"
description = "欧姆龙 PLC（CP 系列等）IO 分配与符号导出辅助工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["build>=1.0", "pytest>=7", "pytest-qt>=4.4", "wheel>=0.45"]

[project.scripts]
omron-io-planner = "omron_io_planner.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"omron_io_planner.ui" = ["assets/icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
